--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -121,6 +121,7 @@
                 android:id="@+id/loginAsGuestText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:clickable="true"
                 android:text="Login as guest"
                 android:textColor="?attr/colorPrimary"
                 android:textSize="14sp"
