--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -51,6 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Theme"
+                android:layout_gravity="center_vertical"
                 android:textSize="16sp"
                 android:textColor="@color/main_text_color" />
 
